# HarmonicLayer

./: .gitignore  pyproject.toml
layer/: __init__.py  harmonic.py
network/: __init__.py  sequential.py
src/harmonet_rekino/integrate/: __init__.py  cubature.py  quadrature.py
src/harmonet_rekino/layer/: harmonic.py
src/harmonet_rekino/network/: __init__.py  sequential.py
test/: test_integrators.py  test_layer.py  test_network.py
